# DraftCreator

./: CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  scribblearea.cpp  scribblearea.h
